# fastapi-cloud

./: .dockerignore  .env.sample  .gitignore  Dockerfile.vercel  README.md  app.py  compose.yml  pyproject.toml  stressconfig.json
modules/: __init__.py  auth.py  geo.py  health_pinger.py  middleware.py  openapi.py  rate_limit.py  utils.py
templates/: index.html
