[project]
name = "fastapi-cloud"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.139.0",
    "psutil>=7.2.2",
    "slowapi>=0.1.10",
    "stressanapi>=1.0.3",
]

[tool.fastapi]
entrypoint = "app:app"
